# Generator_do_Baz_danych

./: CMakeLists.txt  Tstudent.cpp  Twykladowca.cpp  main.cpp
